software-management/k8s/yaml/namespace.yaml

# kubectl apply -f namespace.yaml
# kubectl delete -f namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
