software-management/k8s/yaml/pod-multy.yaml

# kubectl apply -f pod.yaml
# kubectl delete -f pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: myapp
  name: myapp
spec:
  containers:
  - image: nginx
    name: nginx
  - image: tomcat:8.5.68
    name: tomcat
